--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -2184,6 +2184,13 @@
     "print(\"After NC1 Column Creation:\")\n",
     "print(df[qn11_columns + qn12_columns + ['NC1']].tail())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "then we can drop those columns:"
+   ]
   }
  ],
  "metadata": {
