Handled all the merges

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -2428,6 +2428,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of columns used for the first NC1 merge\n",
+    "nc1_columns = ['QN11a', 'QN11b', 'QN11b', 'QN12a', 'QN12b', 'QN12f']\n",
+    "\n",
+    "# Drop these columns from the DataFrame\n",
+    "df = df.drop(columns=nc1_columns)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2503,6 +2517,22 @@
    "source": [
     "print(\"After NC3 Column Creation:\")\n",
     "print(df[qn16_columns + qn17_columns + ['NC3']].tail())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now we drop the rest of the columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=nc3_columns)\n"
    ]
   },
   {
@@ -2778,6 +2808,549 @@
     "\n",
     "print(\"After NC6 Column Creation:\")\n",
     "print(df[nc6_columns + ['NC6']].tail())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now drop the rest of the columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=nc6_columns)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now merging columns 'QN30', 'QN31', 'QN32', and 'QN33' to create NC7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before NC7 Column Creation:\n",
+      "       QN30  QN31  QN32  QN33\n",
+      "22064   NaN   NaN   NaN   NaN\n",
+      "22065   NaN   NaN   NaN   NaN\n",
+      "22066   NaN   NaN   NaN   NaN\n",
+      "22067   NaN   NaN   NaN   NaN\n",
+      "22068   NaN   NaN   NaN   NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the columns for NC7\n",
+    "nc7_columns = ['QN30', 'QN31', 'QN32', 'QN33']\n",
+    "\n",
+    "# Print the columns before merging\n",
+    "print(\"Before NC7 Column Creation:\")\n",
+    "print(df[nc7_columns].tail())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After NC7 Column Creation:\n",
+      "       QN30  QN31  QN32  QN33 NC7\n",
+      "22064   NaN   NaN   NaN   NaN   0\n",
+      "22065   NaN   NaN   NaN   NaN   0\n",
+      "22066   NaN   NaN   NaN   NaN   0\n",
+      "22067   NaN   NaN   NaN   NaN   0\n",
+      "22068   NaN   NaN   NaN   NaN   0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the function to check for curiosity about e-cigarettes\n",
+    "def check_curiosity(row):\n",
+    "    # If there's a value in any nc7_columns, it indicates curiosity or openness\n",
+    "    if row[nc7_columns].any():\n",
+    "        return \"1\"  # Curiosity or openness present\n",
+    "    else:\n",
+    "        return \"0\"  # No curiosity or openness\n",
+    "    \n",
+    "\n",
+    "# Apply the function to create NC7\n",
+    "df['NC7'] = df.apply(check_curiosity, axis=1)\n",
+    "\n",
+    "print(\"After NC7 Column Creation:\")\n",
+    "print(df[nc7_columns + ['NC7']].tail())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop the columns we used to make NC7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=nc7_columns)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now merging columns  'QN34A', 'QN34B', 'QN34C', 'QN35A', 'QN35B', and 'QN35C'  to create NC8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before NC8 Column Creation:\n",
+      "       QN34a  QN34b  QN34c  QN35a  QN35b  QN35c\n",
+      "22064    2.0    2.0    2.0    NaN    NaN    NaN\n",
+      "22065    1.0    1.0    1.0    1.0    1.0    1.0\n",
+      "22066    2.0    2.0    2.0    NaN    NaN    NaN\n",
+      "22067    1.0    2.0    2.0    1.0    NaN    NaN\n",
+      "22068    1.0    1.0    1.0    3.0    2.0    1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define columns for NC8\n",
+    "nc8_columns = ['QN34a', 'QN34b', 'QN34c', 'QN35a', 'QN35b', 'QN35c']\n",
+    "\n",
+    "# Print the columns before merging\n",
+    "print(\"Before NC8 Column Creation:\")\n",
+    "print(df[nc8_columns].tail())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After NC8 Column Creation:\n",
+      "       QN34a  QN34b  QN34c  QN35a  QN35b  QN35c NC8\n",
+      "22064    2.0    2.0    2.0    NaN    NaN    NaN   1\n",
+      "22065    1.0    1.0    1.0    1.0    1.0    1.0   1\n",
+      "22066    2.0    2.0    2.0    NaN    NaN    NaN   1\n",
+      "22067    1.0    2.0    2.0    1.0    NaN    NaN   1\n",
+      "22068    1.0    1.0    1.0    3.0    2.0    1.0   1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define function to check for vaping marijuana, CBD, or THC products\n",
+    "def check_vaping_substances(row):\n",
+    "    # If there's a value in any nc8_columns, it indicates vaping of these substances\n",
+    "    if row[nc8_columns].any():\n",
+    "        return \"1\"  # Vaping these substances present\n",
+    "    else:\n",
+    "        return \"0\"  # No vaping of these substances\n",
+    "    \n",
+    "\n",
+    "\n",
+    "# Apply the function to create NC8\n",
+    "df['NC8'] = df.apply(check_vaping_substances, axis=1)\n",
+    "print(\"After NC8 Column Creation:\")\n",
+    "print(df[nc8_columns + ['NC8']].tail())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now drop the rest of the columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=nc8_columns)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now merging columns  'QN135A', 'QN135B', 'QN135C', 'QN135D', and 'QN135E'  to create NC11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before NC11 Column Creation:\n",
+      "       QN135a  QN135b  QN135c  QN135d  QN135e\n",
+      "22064     NaN     NaN     NaN     1.0     NaN\n",
+      "22065     1.0     1.0     1.0     1.0     NaN\n",
+      "22066     NaN     1.0     NaN     NaN     NaN\n",
+      "22067     NaN     NaN     NaN     NaN     NaN\n",
+      "22068     1.0     NaN     NaN     NaN     NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define columns for NC11\n",
+    "nc11_columns = ['QN135a', 'QN135b', 'QN135c', 'QN135d', 'QN135e']\n",
+    "\n",
+    "# Print the columns before merging\n",
+    "print(\"Before NC11 Column Creation:\")\n",
+    "print(df[nc11_columns].tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After NC11 Column Creation:\n",
+      "       QN135a  QN135b  QN135c  QN135d  QN135e NC11\n",
+      "22064     NaN     NaN     NaN     1.0     NaN    1\n",
+      "22065     1.0     1.0     1.0     1.0     NaN    1\n",
+      "22066     NaN     1.0     NaN     NaN     NaN    1\n",
+      "22067     NaN     NaN     NaN     NaN     NaN    0\n",
+      "22068     1.0     NaN     NaN     NaN     NaN    1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define function to check if e-cigarette use was witnessed at school\n",
+    "def check_ecig_witnessed(row):\n",
+    "    # If there's a value in any nc11_columns, it indicates e-cigarette use witnessed at school\n",
+    "    if row[nc11_columns].any():\n",
+    "        return \"1\"  # E-cigarette use witnessed\n",
+    "    else:\n",
+    "        return \"0\"  # No e-cigarette use witnessed\n",
+    "\n",
+    "\n",
+    "# Apply the function to create NC11\n",
+    "df['NC11'] = df.apply(check_ecig_witnessed, axis=1)\n",
+    "print(\"After NC11 Column Creation:\")\n",
+    "print(df[nc11_columns + ['NC11']].tail())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now drop the rest of the columns "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=nc11_columns)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now merging columns 'QN136B', 'QN136C', 'QN136D', 'QN136E', 'QN136H', \n",
+    "                'QN136I', 'QN136J', 'QN136K', and 'QN136L' to create NC12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before NC12 Column Creation:\n",
+      "       QN136b  QN136c  QN136d  QN136e  QN136h  QN136i  QN136j  QN136k  QN136l\n",
+      "22064     1.0     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN\n",
+      "22065     1.0     NaN     NaN     NaN     1.0     NaN     NaN     NaN     1.0\n",
+      "22066     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN\n",
+      "22067     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN\n",
+      "22068     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define columns for NC12\n",
+    "nc12_columns = ['QN136b', 'QN136c', 'QN136d', 'QN136e', 'QN136h', \n",
+    "                'QN136i', 'QN136j', 'QN136k', 'QN136l']\n",
+    "\n",
+    "# Print the columns before merging\n",
+    "print(\"Before NC12 Column Creation:\")\n",
+    "print(df[nc12_columns].tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After NC12 Column Creation:\n",
+      "       QN136b  QN136c  QN136d  QN136e  QN136h  QN136i  QN136j  QN136k  QN136l  \\\n",
+      "22064     1.0     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
+      "22065     1.0     NaN     NaN     NaN     1.0     NaN     NaN     NaN     1.0   \n",
+      "22066     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
+      "22067     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
+      "22068     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN     NaN   \n",
+      "\n",
+      "      NC12  \n",
+      "22064    1  \n",
+      "22065    1  \n",
+      "22066    0  \n",
+      "22067    0  \n",
+      "22068    0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define function to check if respondent lives with someone who uses tobacco products\n",
+    "def check_tobacco_use_at_home(row):\n",
+    "    # If there's a value in any nc12_columns, it indicates tobacco use at home\n",
+    "    if row[nc12_columns].any():\n",
+    "        return \"1\"  # Tobacco use present in household\n",
+    "    else:\n",
+    "        return \"0\"  # No tobacco use in household\n",
+    "\n",
+    "\n",
+    "# Apply the function to create NC12\n",
+    "df['NC12'] = df.apply(check_tobacco_use_at_home, axis=1)\n",
+    "print(\"After NC12 Column Creation:\")\n",
+    "print(df[nc12_columns + ['NC12']].tail())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now drop the rest of the columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=nc12_columns)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now merging columns 'QN137A', 'QN137B', 'QN137C', 'QN137D', and 'QN137E' to create NC13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before NC13 Column Creation:\n",
+      "       QN137a  QN137b  QN137c  QN137d  QN137e\n",
+      "22064     2.0     2.0     2.0     2.0     2.0\n",
+      "22065     2.0     2.0     2.0     2.0     2.0\n",
+      "22066     2.0     2.0     2.0     2.0     2.0\n",
+      "22067     NaN     NaN     NaN     NaN     NaN\n",
+      "22068     1.0     1.0     1.0     1.0     1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define columns for NC13\n",
+    "nc13_columns = ['QN137a', 'QN137b', 'QN137c', 'QN137d', 'QN137e']\n",
+    "\n",
+    "# Print the columns before merging\n",
+    "print(\"Before NC13 Column Creation:\")\n",
+    "print(df[nc13_columns].tail())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After NC13 Column Creation:\n",
+      "       QN137a  QN137b  QN137c  QN137d  QN137e NC13\n",
+      "22064     2.0     2.0     2.0     2.0     2.0    1\n",
+      "22065     2.0     2.0     2.0     2.0     2.0    1\n",
+      "22066     2.0     2.0     2.0     2.0     2.0    1\n",
+      "22067     NaN     NaN     NaN     NaN     NaN    0\n",
+      "22068     1.0     1.0     1.0     1.0     1.0    1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define function to check for experiences of psychological distress or discrimination at school\n",
+    "def check_school_distress(row):\n",
+    "    # If there's a value in any nc13_columns, it indicates distress or discrimination experience\n",
+    "    if row[nc13_columns].any():\n",
+    "        return \"1\"  # Psychological distress or discrimination present\n",
+    "    else:\n",
+    "        return \"0\"  # No psychological distress or discrimination\n",
+    "\n",
+    "# Apply the function to create NC13\n",
+    "df['NC13'] = df.apply(check_school_distress, axis=1)\n",
+    "print(\"After NC13 Column Creation:\")\n",
+    "print(df[nc13_columns + ['NC13']].tail())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now drop the rest of the columns that created NC13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=nc13_columns)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now merging columns 'QN137H', 'QN137I', 'QN137J', 'QN137K', 'QN137L', 'QN137M', and 'QN137N' to create NC14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before NC14 Column Creation:\n",
+      "       QN137h  QN137i  QN137j  QN137k  QN137l  QN137m  QN137n\n",
+      "22064     2.0     2.0     2.0     2.0     2.0     2.0     2.0\n",
+      "22065     2.0     2.0     2.0     2.0     2.0     2.0     2.0\n",
+      "22066     2.0     2.0     2.0     2.0     2.0     2.0     2.0\n",
+      "22067     NaN     NaN     NaN     NaN     NaN     NaN     NaN\n",
+      "22068     1.0     1.0     1.0     1.0     1.0     1.0     1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define columns for NC14\n",
+    "nc14_columns = ['QN137h', 'QN137i', 'QN137j', 'QN137k', 'QN137l', 'QN137m', 'QN137n']\n",
+    "\n",
+    "# Print the columns before merging\n",
+    "print(\"Before NC14 Column Creation:\")\n",
+    "print(df[nc14_columns].tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After NC14 Column Creation:\n",
+      "       QN137h  QN137i  QN137j  QN137k  QN137l  QN137m  QN137n NC14\n",
+      "22064     2.0     2.0     2.0     2.0     2.0     2.0     2.0    1\n",
+      "22065     2.0     2.0     2.0     2.0     2.0     2.0     2.0    1\n",
+      "22066     2.0     2.0     2.0     2.0     2.0     2.0     2.0    1\n",
+      "22067     NaN     NaN     NaN     NaN     NaN     NaN     NaN    0\n",
+      "22068     1.0     1.0     1.0     1.0     1.0     1.0     1.0    1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define function to check for general experiences of discrimination\n",
+    "def check_discrimination(row):\n",
+    "    # If there's a value in any nc14_columns, it indicates discrimination experience\n",
+    "    if row[nc14_columns].any():\n",
+    "        return \"1\"  # Discrimination experience present\n",
+    "    else:\n",
+    "        return \"0\"  # No discrimination experience\n",
+    "\n",
+    "# Apply the function to create NC14\n",
+    "df['NC14'] = df.apply(check_discrimination, axis=1)\n",
+    "print(\"After NC14 Column Creation:\")\n",
+    "print(df[nc14_columns + ['NC14']].tail())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now drop the rest of the columns used to create NC14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=nc14_columns)\n"
    ]
   }
  ],
