updated new columns

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "[5 rows x 867 columns]"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -1587,7 +1587,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1606,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -2330,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -2370,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2410,8 +2410,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NC1:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
@@ -2438,7 +2445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -2467,7 +2474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -2499,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2515,12 +2522,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Merge the columns to create NC3"
+    "# NC2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 305,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before NC2 Column Creation:\n",
+      "       QN12l\n",
+      "22064    1.0\n",
+      "22065    NaN\n",
+      "22066    NaN\n",
+      "22067    NaN\n",
+      "22068    1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#before merge\n",
+    "nc2_columns = ['QN12l']\n",
+    "\n",
+    "print(\"Before NC2 Column Creation:\")\n",
+    "print(df[nc2_columns].tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After NC2 Column Creation:\n",
+      "       QN12l NC2\n",
+      "22064    1.0   1\n",
+      "22065    NaN   0\n",
+      "22066    NaN   0\n",
+      "22067    NaN   0\n",
+      "22068    1.0   1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/4z/n7sr27qx5h18n91g81tmnsdh0000gn/T/ipykernel_66857/341030039.py:8: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  df['NC2'] = df.apply(check_mental_state, axis=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_mental_state(row):\n",
+    "    if row[nc2_columns].any():\n",
+    "        return \"1\"  # Bad mental state present\n",
+    "    else:\n",
+    "        return \"0\"  # No bad mental state\n",
+    "\n",
+    "# Apply the function to create NC2\n",
+    "df['NC2'] = df.apply(check_mental_state, axis=1)\n",
+    "# After merging, display NC2 column alongside related columns\n",
+    "print(\"After NC2 Column Creation:\")\n",
+    "print(df[nc2_columns + ['NC2']].tail())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "columns_to_drop = ['QN12c', 'QN12d', 'QN12e', 'QN12g', 'QN12h', 'QN12i', 'QN12j', 'QN12k', 'QN12l','QN12m', 'QN12n']\n",
+    "\n",
+    "# Drop these columns from the DataFrame\n",
+    "df = df.drop(columns=columns_to_drop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NC3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -2547,7 +2642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -2576,7 +2671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -2607,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2618,13 +2713,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now merging columns 'QN18E_A', 'QN18E_B', 'QN18E_C', 'QN18E_D', 'QN18E_E', \n",
-    "               'QN18E_F', 'QN18E_G', 'QN18E_H', 'QN18E_I', 'QN18E_J', 'QN18E_K', and 'QN77' to create NC4"
+    "# Now merging NC4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -2659,7 +2753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -2718,7 +2812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2729,13 +2823,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now merging columns 'QN18F_A', 'QN18F_B', 'QN18F_C', 'QN18F_D', 'QN18F_E', \n",
-    "               'QN18F_F', 'QN18F_G', 'QN18F_H', 'QN18F_I', 'QN18F_J', 'QN18F_K', and 'QN83' to create NC5"
+    "# Now merging NC5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -2770,7 +2863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -2827,7 +2920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2838,13 +2931,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now merging 'QN21A_A', 'QN21A_B', 'QN21A_C', 'QN21A_D', 'QN21A_E', \n",
-    "               'QN21A_F', and 'QN21A_G' to create NC6"
+    "# Now merging NC6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -2872,7 +2964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -2922,7 +3014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2934,12 +3026,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now merging columns 'QN30', 'QN31', 'QN32', and 'QN33' to create NC7"
+    "# Now merging NC7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -2968,7 +3060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -3019,7 +3111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3030,12 +3122,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now merging columns  'QN34A', 'QN34B', 'QN34C', 'QN35A', 'QN35B', and 'QN35C'  to create NC8"
+    "# Now merging NC8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -3064,7 +3156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -3115,7 +3207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3131,7 +3223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -3150,16 +3242,16 @@
    ],
    "source": [
     "# Define columns for NC11\n",
-    "nc11_columns = ['QN135a', 'QN135b', 'QN135c', 'QN135d', 'QN135e']\n",
+    "nc9_columns = ['QN135a', 'QN135b', 'QN135c', 'QN135d', 'QN135e']\n",
     "\n",
     "# Print the columns before merging\n",
     "print(\"Before NC11 Column Creation:\")\n",
-    "print(df[nc11_columns].tail())"
+    "print(df[nc9_columns].tail())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -3188,16 +3280,16 @@
     "# Define function to check if e-cigarette use was witnessed at school\n",
     "def check_ecig_witnessed(row):\n",
     "    # If there's a value in any nc11_columns, it indicates e-cigarette use witnessed at school\n",
-    "    if row[nc11_columns].any():\n",
+    "    if row[nc9_columns].any():\n",
     "        return \"1\"  # E-cigarette use witnessed\n",
     "    else:\n",
     "        return \"0\"  # No e-cigarette use witnessed\n",
     "\n",
     "\n",
     "# Apply the function to create NC11\n",
-    "df['NC11'] = df.apply(check_ecig_witnessed, axis=1)\n",
-    "print(\"After NC11 Column Creation:\")\n",
-    "print(df[nc11_columns + ['NC11']].tail())\n"
+    "df['NC9'] = df.apply(check_ecig_witnessed, axis=1)\n",
+    "print(\"After NC9 Column Creation:\")\n",
+    "print(df[nc9_columns + ['NC9']].tail())\n"
    ]
   },
   {
@@ -3209,11 +3301,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(columns=nc11_columns)\n"
+    "df = df.drop(columns=nc9_columns)\n"
    ]
   },
   {
@@ -3226,7 +3318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -3245,17 +3337,17 @@
    ],
    "source": [
     "# Define columns for NC12\n",
-    "nc12_columns = ['QN136b', 'QN136c', 'QN136d', 'QN136e', 'QN136h', \n",
+    "nc10_columns = ['QN136b', 'QN136c', 'QN136d', 'QN136e', 'QN136h', \n",
     "                'QN136i', 'QN136j', 'QN136k', 'QN136l']\n",
     "\n",
     "# Print the columns before merging\n",
-    "print(\"Before NC12 Column Creation:\")\n",
-    "print(df[nc12_columns].tail())"
+    "print(\"Before NC10 Column Creation:\")\n",
+    "print(df[nc10_columns].tail())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -3291,16 +3383,16 @@
     "# Define function to check if respondent lives with someone who uses tobacco products\n",
     "def check_tobacco_use_at_home(row):\n",
     "    # If there's a value in any nc12_columns, it indicates tobacco use at home\n",
-    "    if row[nc12_columns].any():\n",
+    "    if row[nc10_columns].any():\n",
     "        return \"1\"  # Tobacco use present in household\n",
     "    else:\n",
     "        return \"0\"  # No tobacco use in household\n",
     "\n",
     "\n",
     "# Apply the function to create NC12\n",
-    "df['NC12'] = df.apply(check_tobacco_use_at_home, axis=1)\n",
-    "print(\"After NC12 Column Creation:\")\n",
-    "print(df[nc12_columns + ['NC12']].tail())\n"
+    "df['NC10'] = df.apply(check_tobacco_use_at_home, axis=1)\n",
+    "print(\"After NC10 Column Creation:\")\n",
+    "print(df[nc12_columns + ['NC10']].tail())\n"
    ]
   },
   {
@@ -3312,11 +3404,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(columns=nc12_columns)\n"
+    "df = df.drop(columns=nc10_columns)\n"
    ]
   },
   {
@@ -3328,7 +3420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -3346,17 +3438,17 @@
     }
    ],
    "source": [
-    "# Define columns for NC13\n",
-    "nc13_columns = ['QN137a', 'QN137b', 'QN137c', 'QN137d', 'QN137e']\n",
+    "# Define columns for NC11\n",
+    "nc11_columns = ['QN137a', 'QN137b', 'QN137c', 'QN137d', 'QN137e']\n",
     "\n",
     "# Print the columns before merging\n",
-    "print(\"Before NC13 Column Creation:\")\n",
-    "print(df[nc13_columns].tail())\n"
+    "print(\"Before NC11 Column Creation:\")\n",
+    "print(df[nc11_columns].tail())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -3385,15 +3477,15 @@
     "# Define function to check for experiences of psychological distress or discrimination at school\n",
     "def check_school_distress(row):\n",
     "    # If there's a value in any nc13_columns, it indicates distress or discrimination experience\n",
-    "    if row[nc13_columns].any():\n",
+    "    if row[nc11_columns].any():\n",
     "        return \"1\"  # Psychological distress or discrimination present\n",
     "    else:\n",
     "        return \"0\"  # No psychological distress or discrimination\n",
     "\n",
     "# Apply the function to create NC13\n",
-    "df['NC13'] = df.apply(check_school_distress, axis=1)\n",
-    "print(\"After NC13 Column Creation:\")\n",
-    "print(df[nc13_columns + ['NC13']].tail())\n"
+    "df['NC11'] = df.apply(check_school_distress, axis=1)\n",
+    "print(\"After NC11 Column Creation:\")\n",
+    "print(df[nc13_columns + ['NC11']].tail())\n"
    ]
   },
   {
@@ -3405,11 +3497,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(columns=nc13_columns)\n"
+    "df = df.drop(columns=nc11_columns)\n"
    ]
   },
   {
@@ -3421,7 +3513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -3439,17 +3531,17 @@
     }
    ],
    "source": [
-    "# Define columns for NC14\n",
-    "nc14_columns = ['QN137h', 'QN137i', 'QN137j', 'QN137k', 'QN137l', 'QN137m', 'QN137n']\n",
+    "# Define columns for NC12\n",
+    "nc12_columns = ['QN137h', 'QN137i', 'QN137j', 'QN137k', 'QN137l', 'QN137m', 'QN137n']\n",
     "\n",
     "# Print the columns before merging\n",
-    "print(\"Before NC14 Column Creation:\")\n",
-    "print(df[nc14_columns].tail())"
+    "print(\"Before NC12 Column Creation:\")\n",
+    "print(df[nc12_columns].tail())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -3478,15 +3570,15 @@
     "# Define function to check for general experiences of discrimination\n",
     "def check_discrimination(row):\n",
     "    # If there's a value in any nc14_columns, it indicates discrimination experience\n",
-    "    if row[nc14_columns].any():\n",
+    "    if row[nc12_columns].any():\n",
     "        return \"1\"  # Discrimination experience present\n",
     "    else:\n",
     "        return \"0\"  # No discrimination experience\n",
     "\n",
     "# Apply the function to create NC14\n",
-    "df['NC14'] = df.apply(check_discrimination, axis=1)\n",
-    "print(\"After NC14 Column Creation:\")\n",
-    "print(df[nc14_columns + ['NC14']].tail())\n"
+    "df['NC12'] = df.apply(check_discrimination, axis=1)\n",
+    "print(\"After NC12 Column Creation:\")\n",
+    "print(df[nc12_columns + ['NC12']].tail())\n"
    ]
   },
   {
@@ -3498,11 +3590,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(columns=nc14_columns)\n"
+    "df = df.drop(columns=nc12_columns)\n"
    ]
   },
   {
@@ -3514,7 +3606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -3531,7 +3623,7 @@
     }
    ],
    "source": [
-    "nc_columns = ['NC1', 'NC3', 'NC4', 'NC5', 'NC6', 'NC7', 'NC8', 'NC11', 'NC12', 'NC13', 'NC14']\n",
+    "nc_columns = ['NC1', 'NC2', 'NC3', 'NC4', 'NC5', 'NC6', 'NC7', 'NC8', 'NC9', 'NC10', 'NC11', 'NC12']\n",
     "print(df[nc_columns].head())"
    ]
   }
